fixed post photo overflow

--- a/app/assets/stylesheets/postindex.css
+++ b/app/assets/stylesheets/postindex.css
@@ -58,6 +58,7 @@
 .post-photo {
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 /* link */
