--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -396,6 +396,7 @@
   width: 100px;
   height: 100px;
   border-radius: 8px;
+  border: 0.5px solid rgba(170, 169, 169, 0.808);
 }
 
 .friends-profile-icon:hover {
